# advent-of-code

./: 01.sql  02.sql  README.md  outputs.txt  package-lock.json  package.json  runall  tsconfig.json
2019-typescript/: tsconfig.json
2020-python/: pyproject.toml
2020-python/day-01/: script.py
2020-python/day-02/: script.py
2020-python/day-03/: script.py
2020-python/day-04/: script.py
2020-python/day-05/: script.py
2020-python/day-06/: script.py
2020-python/day-07/: script.py
2020-python/day-08/: script.py
2020-python/day-09/: script.py
2020-python/day-10/: script.py
2020-python/day-11/: script.py
2020-python/day-12/: script.py
2020-python/day-13/: script.py
2020-python/day-14/: script.py
2020-python/day-15/: script.py
2020-python/day-16/: script.py
2020-python/day-17/: script.py
2020-python/day-18/: script.py
2020-python/day-19/: script.py
2020-python/day-20/: script.py
2020-python/day-21/: script.py
2020-python/day-22/: script.py
2020-python/day-23/: script.py
2020-python/day-24/: script.py
2020-python/day-25/: script.py
2025-python/: pyproject.toml
2025-python/day-01/: input.txt  script.py
2025-python/day-02/: input.txt  script.py
2025-python/day-03/: input.txt  script.py
2025-python/day-04/: input.txt  script.py
2025-python/day-05/: script.py
2025-python/day-06/: script.py
2025-python/day-07/: script.py
2025-python/day-08/: input.txt  script.py
2025-python/day-09/: script.py
2025-python/day-10/: script.py
2025-python/day-11/: input.txt  script.py
2025-python/day-12/: input.txt  script.py
(+133 files in other folders)
