[project]
name = "2025-python"
version = "0.1.0"
description = ""
authors = [
    {name = "David Moody",email = "david@davidxmoody.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython (>=9.7.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
